# ExtendedEssay

./: .clang_complete  .gitignore  README.md  build-debug  build-release  build-script  clean
Sources/: CMakeLists.txt  TextureMapping.pro  camera.cpp  camera.h  main.cpp  matrix3x3.cpp  matrix3x3.h  mesh.cpp  mesh.h  ui_widget.h  vector2d.cpp  vector2d.h  vector2f.cpp  vector3d.cpp  vector3d.h  vertex.h  widget.cpp  widget.h  widget.ui
